Update function for create event with schedule
