# backend/server/apps/events/serializers/__init__.py
@@ -1,5 +1,5 @@
 from .location import LocationSerializer
-from .schedule import ScheduleSerializer
+from .schedule import ScheduleSerializer, ScheduleCreateSerializer
 from .event import (
     EventSerializer,
     CreateOneTimeEventSerializer,
